fix(toc): address leadspace search covering TOC

--- a/packages/styles/scss/components/leadspace-with-search/_leadspace-with-search.scss
+++ b/packages/styles/scss/components/leadspace-with-search/_leadspace-with-search.scss
@@ -1,5 +1,5 @@
 /**
- * Copyright IBM Corp. 2016, 2021
+ * Copyright IBM Corp. 2016, 2022
  *
  * This source code is licensed under the Apache-2.0 license found in the
  * LICENSE file in the root directory of this source tree.
@@ -185,7 +185,7 @@
       position: relative;
       display: grid;
       padding-bottom: $spacing-10;
-      z-index: 1;
+      z-index: 11;
 
       @include carbon--breakpoint-down('md') {
         margin: 0 $spacing-05;
